<resources>
    <!-- 应用的名称 -->
    <string name="app_name">Android52</string>

    <!-- 广告unit -->
    <string name="native_ad_unit_id">ca-app-pub-5108101572891948/4458445117</string>
    <string name="banner_ad_unit_id">ca-app-pub-5108101572891948/4157393912</string>


    <!-- 快速入门所用到的字符串 -->
    <string name="day01_values1">HelloWorld!</string>
    <string name="day01_values2">请输入电话号码！</string>
    <string name="day01_values3">拨打电话</string>
    <string name="day01_values4">请输入短信内容</string>
    <string name="day01_values5">发送短信</string>
    <string name="day01_values6">第一种点击事件写法</string>
    <string name="day01_values7">第二种点击事件写法</string>
    <string name="day01_values8">第三种点击事件写法</string>
    <string name="day01_values9">第四种点击事件写法</string>

    <!-- 数据存储和界面展示上所用到的字符串 -->
    <string name="day02_values1">LinearLayoutDemoOne</string>
    <string name="day02_values2">LinearLayoutDemoTwo</string>
    <string name="day02_values3">RelativeLayoutDemoOne</string>
    <string name="day02_values4">RelativeLayoutDemoTwo</string>
    <string name="day02_values5">FrameLayoutDemo</string>
    <string name="day02_values6">TableLayoutDemo</string>
    <string name="day02_values7">AbsoluteLayoutDemo</string>
    <string name="day02_values8">MC</string>
    <string name="day02_values9">M+</string>
    <string name="day02_values10">M-</string>
    <string name="day02_values11">MR</string>
    <string name="day02_values12">C</string>
    <string name="day02_values13">+/-</string>
    <string name="day02_values14">/</string>
    <string name="day02_values15">*</string>
    <string name="day02_values16">7</string>
    <string name="day02_values17">8</string>
    <string name="day02_values18">9</string>
    <string name="day02_values19">-</string>
    <string name="day02_values20">4</string>
    <string name="day02_values21">5</string>
    <string name="day02_values22">6</string>
    <string name="day02_values23">+</string>
    <string name="day02_values24">1</string>
    <string name="day02_values25">2</string>
    <string name="day02_values26">3</string>
    <string name="day02_values27">0</string>
    <string name="day02_values28">.</string>
    <string name="day02_values29">=</string>
    <string name="day02_values30">center</string>
    <string name="day02_values31">up</string>
    <string name="day02_values32">bottom</string>
    <string name="day03_values33">left</string>
    <string name="day02_values34">leftup</string>
    <string name="day02_values35">leftbottom</string>
    <string name="day02_values36">right</string>
    <string name="day02_values37">rightup</string>
    <string name="day02_values38">rightbottom</string>
    <string name="day03_values39">姓名</string>
    <string name="day02_values40">年龄</string>
    <string name="day02_values41">住址</string>
    <string name="day02_values42">张三</string>
    <string name="day02_values43">22</string>
    <string name="day02_values44">北京</string>
    <string name="day02_values45">李四</string>
    <string name="day02_values46">24</string>
    <string name="day02_values47">北京</string>
    <string name="day02_values48">王五</string>
    <string name="day02_values49">35</string>
    <string name="day02_values50">北京</string>
    <string name="day02_values51">绝对布局</string>
    <string name="day02_values52">Logcat等级 \n1.verbose \n2.debug \n3.info \n4.warn \n5.error</string>
    <string name="day02_values53">username</string>
    <string name="day02_values54">password</string>
    <string name="day02_values55">记住账号</string>
    <string name="day02_values56">登录</string>
    <string name="day02_values57">内部存储</string>
    <string name="day02_values58">外部存储</string>
    <string name="day02_values59">SharedPreferences</string>
    <string name="day02_values60">序列化XML</string>
    <string name="day02_values61">解析XML</string>
    <string name="day02_values62">关闭</string>
    <string name="day02_values63">开启</string>
    <string name="day02_values64">自动更新</string>

    <!-- 数据存储和界面展示下所用到的字符串 -->
    <string name="day03_values1">学会使用Android中Junit测试代码</string>
    <string name="day03_values2">学会使用Sqlite来存储数据</string>
    <string name="day03_values3">对话框</string>
    <string name="day03_values4">单选对话框</string>
    <string name="day03_values5">多选对话框</string>
    <array name="Names">
        <item>张三</item>
        <item>李四</item>
        <item>王五</item>
    </array>

    <!-- 网络编程上所用到的字符串 -->
    <string name="day04_values1">自定义的网络图片查看器</string>
    <string name="day04_values2">SmartImageView</string>
    <string name="day04_values3">Picasso</string>
    <string name="day04_values4">Glide</string>
    <string name="day04_values5">Fresco</string>
    <string name="day04_values6">http://i.meizitu.net/2017/04/24b01.jpg</string>
    <string name="day04_values7">查看</string>
    <string name="day04_values8">https://www.baidu.com</string>
    <string name="day04_values9">武汉</string>
    <string name="day04_values10">get</string>
    <string name="day04_values11">post</string>
    <string name="day05_values1">HttpClient</string>
    <string name="day05_values2">AsyncHttpClient</string>

    <!-- 网络编程下所用到的字符串 -->
    <!-- 页面跳转和数据传递所用到的字符串 -->
    <!-- 广播和服务上所用到的字符串 -->
    <!-- 广播和服务下所用到的字符串 -->
    <!-- 多媒体编程所用到的字符串 -->
    <!-- 内容提供者所用到的字符串 -->
    <!-- 新特性和知识点回顾所用到的字符串 -->
    <!-- 总结所用到的字符串 -->

    <!-- 总纲内容列表 -->
    <array name="MainItem">
        <item>day01_快速入门</item>
        <item>ad</item>
        <item>day02_数据存储和界面展示上</item>
        <item>ad</item>
        <item>day03_数据存储和界面展示下</item>
        <item>ad</item>
        <item>day04_网络编程上</item>
        <item>ad</item>
        <item>day05_网络编程下</item>
        <item>ad</item>
        <item>day06_页面跳转和数据传递</item>
        <item>ad</item>
        <item>day07_广播和服务上</item>
        <item>ad</item>
        <item>day08_广播和服务下</item>
        <item>ad</item>
        <item>day09_多媒体编程</item>
        <item>ad</item>
        <item>day10_内容提供者</item>
        <item>ad</item>
        <item>day11_新特性和知识点回顾</item>
        <item>ad</item>
        <item>day12_总结</item>
        <item>ad</item>
    </array>

    <!-- 快速入门内容列表 -->
    <array name="Day01">
        <item>HelloWorld</item>
        <item>ad</item>
        <item>PhoneDialer</item>
        <item>ad</item>
        <item>SmsSender</item>
        <item>ad</item>
        <item>ClickEvent</item>
        <item>ad</item>
    </array>
    <array name="Day02">
        <item>CommonLayout</item>
        <item>ad</item>
        <item>Logcat</item>
        <item>ad</item>
        <item>SDStateAndSize</item>
        <item>ad</item>
        <item>StorageOption</item>
        <item>ad</item>
        <item>OperatorXML</item>
        <item>ad</item>
        <item>Preference</item>
        <item>ad</item>
    </array>
    <array name="Day03">
        <item>Junit</item>
        <item>ad</item>
        <item>Sqlite</item>
        <item>ad</item>
        <item>ListView</item>
        <item>ad</item>
        <item>Dialog</item>
        <item>ad</item>
    </array>
    <array name="Day04">
        <item>ImageViewer</item>
        <item>ad</item>
        <item>HTMLViewer</item>
        <item>ad</item>
        <item>SimpleNewsClient</item>
        <item>ad</item>
        <item>GETAndPOST</item>
        <item>ad</item>
    </array>
    <array name="Day05">
        <item>HttpClientAndAsyncHttpClient</item>
        <item>ad</item>
        <item>Downloader</item>
        <item>ad</item>
    </array>
    <array name="Day06">
        <item>SecondActivity</item>
        <item>ad</item>
        <item>ActivityJump</item>
        <item>ad</item>
        <item>ActivityLifeCycle</item>
        <item>ad</item>
        <item>ActivityLunchMode</item>
        <item>ad</item>
        <item>ScreenOrientation</item>
        <item>ad</item>
        <item>StartActivityForResult</item>
        <item>ad</item>
    </array>
    <array name="Day07">
        <item>IPDialer</item>
        <item>ad</item>
        <item>SMSBroad</item>
        <item>ad</item>
        <item>SDCardBroad</item>
        <item>ad</item>
        <item>BootComplete</item>
        <item>ad</item>
        <item>PackageBroad</item>
        <item>ad</item>
        <item>CustomBroad</item>
        <item>ad</item>
        <item>OrderBroad</item>
        <item>ad</item>
        <item>PhoneRecoder</item>
        <item>ad</item>
    </array>
    <array name="Day08">
        <item>Service</item>
        <item>ad</item>
        <item>LeaderService</item>
        <item>ad</item>
        <item>MusicPlayer</item>
        <item>ad</item>
        <item>CodeRegistBroad</item>
        <item>ad</item>
        <item>StartRemoteService</item>
        <item>ad</item>
        <item>PayDemo</item>
        <item>ad</item>
        <item>StyleAndTheme</item>
        <item>ad</item>
        <item>I18n</item>
        <item>ad</item>
    </array>
    <array name="Day09">
        <item>LoadBigImage</item>
        <item>ad</item>
        <item>CopyBitmap</item>
        <item>ad</item>
        <item>ImageSpecialEffects</item>
        <item>ad</item>
        <item>DrawingBoard</item>
        <item>ad</item>
        <item>HeartBeat</item>
        <item>ad</item>
        <item>MusicPlayer</item>
        <item>ad</item>
        <item>VideoPlayer</item>
        <item>ad</item>
        <item>Camera</item>
        <item>ad</item>
    </array>
    <array name="Day10">
        <item>CustomContentProvider</item>
        <item>ad</item>
        <item>OperatorSMS</item>
        <item>ad</item>
        <item>OperatorContacts</item>
        <item>ad</item>
        <item>ContentObserver</item>
        <item>ad</item>
    </array>
    <array name="Day11">
        <item>Fragment</item>
        <item>ad</item>
        <item>Animator</item>
        <item>ad</item>
    </array>
    <array name="Day12">
        <item>Summary</item>
        <item>ad</item>
    </array>
</resources>
