<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="zhaoliang.com.android52.ui.day02.storageoption.StorageOptionActivity">

    <include layout="@layout/item_banner_ad" />

    <Button
        android:id="@+id/btn_internal_storage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="storage"
        android:text="@string/day02_values57" />

    <Button
        android:id="@+id/btn_external_storage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="storage"
        android:text="@string/day02_values58" />

    <Button
        android:id="@+id/btn_shared_preferences"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="storage"
        android:text="@string/day02_values59" />

</LinearLayout>
